--- a/pratica_css copy.html
+++ b/pratica_css copy.html
@@ -8,7 +8,24 @@
 	<title>Aula CSS - 1</title>
 	<link rel"stylesheet" href="style.css">
 </head>
+<style>
+	.card {
+		width:500px; 
+		height: fit-content; 
+		background-color: aliceblue; 
+		border-radius: 25px; 
+		border: solid 2px rgb(36,36,141); 
+		margin: 20px; 
+		padding: 40px
+	}
+	.container_imagem {
+		width: 100px; 
+		height: 100px;
+		border-radius: 50%;
+		margin-bottom: 40px;		
+	}
 
+</style>
 <body>
 
 	<div class="card">
